fixed issue where p tags were dealt as separate posts

--- a/reddit_scraper_with_local_model.ipynb
+++ b/reddit_scraper_with_local_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,6 @@
     "import pickle\n",
     "import pandas as pd\n",
     "import time\n",
-    "from openai import OpenAI\n",
-    "import os\n",
     "\n",
     "def scrape(sub_red):\n",
     "    token = 'dLN3qq4_CCZeNJTAPTwGdA'\n",
@@ -25,72 +23,46 @@
     "        return response['body']\n",
     "    else:\n",
     "        print('Error')\n",
-    "html_data = scrape('depression')"
+    "# html_data = scrape('depression')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4a9d6bf2",
+   "execution_count": 2,
+   "id": "8539c2f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process(doc):\n",
-    "    client = OpenAI(api_key = os.environ[\"OPENAI_API_KEY\"])\n",
-    "    response = client.responses.create(\n",
-    "        model='gpt-5.1',\n",
-    "        input=\"is this post suicidal?\" + \" '\" + doc + \"' \" + 'return True or False'\n",
-    "    )\n",
-    "    if 'True' in response.output_text:\n",
-    "        return True\n",
-    "    else: return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "8539c2f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved a post from r/depression True\n",
-      "saved a post from r/depression True\n",
-      "saved a post from r/depression True\n"
-     ]
-    }
-   ],
-   "source": [
     "def save_post(html_data,sub_red):    \n",
+    "    with open('model.p', 'rb') as file:\n",
+    "        model = pickle.load(file)\n",
+    "    with open('vectorizer.p', 'rb') as file:\n",
+    "        vectorizer = pickle.load(file)\n",
     "    soup = BeautifulSoup(html_data, 'html.parser')\n",
     "    instances = soup.find_all('div', property=\"schema:articleBody\")\n",
     "    docs = []\n",
     "    for instance in instances:\n",
-    "        p_tags = []\n",
     "        for p_tag in instance:\n",
     "            if p_tag:\n",
-    "                stripped = p_tag.get_text().strip()\n",
-    "                p_tags.append(stripped)\n",
-    "        docs.append(''.join(p_tags))\n",
-    "\n",
+    "                docs.append(''.join(p_tag.get_text().strip()))\n",
     "\n",
     "    verdicts = pd.read_csv('verdicts.csv')\n",
     "    for doc in docs:\n",
-    "        bool = process(doc)\n",
+    "        vectorized = vectorizer.transform([doc])\n",
+    "        predict_probas = model.predict_proba(vectorized)[:, 1]\n",
+    "        threshold = 0.95\n",
+    "        bool = (predict_probas >= threshold)\n",
     "        if not (verdicts['post'] == doc).any() and doc:\n",
-    "            # print(pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red}))\n",
-    "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red},index=[0])])\n",
+    "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red})])\n",
     "            verdicts.to_csv('verdicts.csv', index=False)\n",
     "            print('saved a post from r/' + sub_red + ' ' + str(bool))\n",
-    "save_post(html_data,'depression')\n",
+    "# save_post(html_data,'depression')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "812862b4",
    "metadata": {},
    "outputs": [
@@ -98,31 +70,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression True\n",
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression False\n",
-      "saved a post from r/depression False\n"
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [ True]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [False]\n"
      ]
     }
    ],
    "source": [
     "sub_reds = ['depression', 'sad', 'confessions']\n",
-    "sub_reds = ['depression']\n",
+    "# sub_reds = ['depression']\n",
     "iterations = 0\n",
     "# while iterations < 24:\n",
     "\n",
     "for sub_red in sub_reds:\n",
-    "    # try:\n",
-    "\n",
-    "    save_post(scrape(sub_red),sub_red)\n",
-    "\n",
-    "    # except Exception as e: print(sub_red, e)\n",
-    "\n",
+    "    try: \n",
+    "        save_post(scrape(sub_red),sub_red)\n",
+    "    except Exception as e: print(sub_red, e)\n",
     "    # time.sleep(10)\n",
     "# time.sleep(1800)\n",
     "\n",
@@ -131,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "f260042a",
    "metadata": {},
    "outputs": [],
@@ -139,6 +111,34 @@
     "verdicts = pd.DataFrame({'sub_red': [],'verdict':[], 'post':[]})\n",
     "verdicts.to_csv('verdicts.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2e38473",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "934de1d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mbool\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
