commit before exploring older commits. Current code takes a long time to run and I am troubleshooting. This is right after I tried combining ai and model results in order to compare.

--- a/reddit_scraper_with_local_model.ipynb
+++ b/reddit_scraper_with_local_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
@@ -12,45 +12,31 @@
     "import pickle\n",
     "import pandas as pd\n",
     "import time\n",
-    "\n",
-    "def scrape(sub_red):\n",
-    "    token = 'dLN3qq4_CCZeNJTAPTwGdA'\n",
-    "    reddit_url = 'https://www.reddit.com/r/' + sub_red + '/new/'\n",
-    "    api = CrawlingAPI({'token': token})\n",
-    "    response = api.get(reddit_url)\n",
-    "\n",
-    "    if response['status_code'] == 200:\n",
-    "        return response['body']\n",
-    "    else:\n",
-    "        print('Error')\n",
-    "# html_data = scrape('depression')"
+    "from reddit_scrape import scrape, parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8539c2f5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def save_post(html_data,sub_red):    \n",
     "    with open('model.p', 'rb') as file:\n",
     "        model = pickle.load(file)\n",
     "    with open('vectorizer.p', 'rb') as file:\n",
     "        vectorizer = pickle.load(file)\n",
-    "    soup = BeautifulSoup(html_data, 'html.parser')\n",
-    "    instances = soup.find_all('div', property=\"schema:articleBody\")\n",
-    "    docs = []\n",
-    "    for instance in instances:\n",
-    "        for p_tag in instance:\n",
-    "            if p_tag:\n",
-    "                docs.append(''.join(p_tag.get_text().strip()))\n",
+    "\n",
+    "    docs = parse(html_data)\n",
     "\n",
     "    verdicts = pd.read_csv('verdicts.csv')\n",
     "    for doc in docs:\n",
     "        vectorized = vectorizer.transform([doc])\n",
     "        predict_probas = model.predict_proba(vectorized)[:, 1]\n",
-    "        threshold = 0.95\n",
+    "        threshold = 0.5\n",
     "        bool = (predict_probas >= threshold)\n",
     "        if not (verdicts['post'] == doc).any() and doc:\n",
     "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red})])\n",
@@ -62,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "812862b4",
    "metadata": {},
    "outputs": [
@@ -70,16 +56,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [ True]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [False]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [ True]\n",
       "saved a post from r/confessions [False]\n",
       "saved a post from r/confessions [False]\n",
       "saved a post from r/confessions [False]\n",
       "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [ True]\n",
       "saved a post from r/confessions [False]\n",
       "saved a post from r/confessions [False]\n"
      ]
